# negotiated

./: CMakeLists.txt  README.md  package.xml
include/negotiated/: negotiated_publisher.hpp  negotiated_subscriber.hpp
negotiated/: CMakeLists.txt  README.md  package.xml
negotiated/include/negotiated/: combinations.hpp  negotiated_publisher.hpp  negotiated_subscriber.hpp  negotiated_subscription.hpp  supported_type_map.hpp
negotiated/src/: combinations.hpp  example_type_info.hpp  neg_pub_example1.cpp  neg_sub_example1.cpp  neg_sub_example2.cpp  negotiated_publisher.cpp  negotiated_subscriber.cpp  negotiated_subscription.cpp  supported_type_map.cpp
negotiated/test/: test_combinations.cpp  test_negotiated_publisher.cpp  test_negotiated_subscription.cpp
negotiated_examples/: CMakeLists.txt  package.xml
negotiated_examples/launch/: negotiated_composed-launch.py  negotiated_pub_sub_pair-launch.py  negotiated_pub_sub_pair_remap-launch.py  negotiated_pub_sub_pair_remap2-launch.py  negotiated_pub_sub_pair_remap3-launch.py
negotiated_examples/src/: example_type_info.hpp  neg_pub_example1.cpp  neg_sub_example1.cpp  neg_sub_example2.cpp  negotiated_lifecycle_pub.cpp  negotiated_pub_compatible_example1.cpp  negotiated_pub_example1.cpp  negotiated_pub_sub_pair_example1.cpp  negotiated_pub_sub_pair_example2.cpp  negotiated_pub_type_adapt_example1.cpp  negotiated_sub_example1.cpp  negotiated_sub_example3.cpp  negotiated_sub_type_adapt_example1.cpp
negotiated_interfaces/: CMakeLists.txt  package.xml
negotiated_interfaces/msg/: NegotiatedTopicInfo.msg  NegotiatedTopicsInfo.msg  NewTopicInfo.msg  Preference.msg  Preferences.msg  SupportedType.msg  SupportedTypes.msg
negotiated_interfaces/srv/: NegotiatedPreferences.srv
src/: negotiated_publisher.cpp  negotiated_subscriber.cpp
