<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>negotiated</name>
  <version>0.1.0</version>
  <description>A package containing a negotiating publisher and subscription.</description>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>
  <license>Apache-2.0</license>
  <license>Boost</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>negotiated_interfaces</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
